[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/animated/skills/attack_magic_bullet_move.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/animated/skills/attack_magic_bullet_disappear.png" type="Texture" id=2]
[ext_resource path="res://scripts/character/skills/attack_magic_bullet.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "disappear",
"speed": 24.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "move",
"speed": 24.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.0
height = 0.0

[node name="MagicBullet" type="Area2D"]
position = Vector2( 0, 1 )
scale = Vector2( 2, 4 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 5 )
animation = "disappear"
offset = Vector2( 0, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 10 )

[node name="DecayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
